--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -24,7 +24,7 @@
 
     <div class="table-responsive">
       <table class="table mb-0"
-             *ngIf="productFilter$ | async as products">
+             *ngIf="products$ | async as products">
         <thead>
           <tr>
             <th>Product</th>
